[package]
name = "algokit_transact"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test_utils = ["dep:base64", "dep:ed25519-dalek", "dep:convert_case"]

[dependencies]
base32 = "0.5.1"
base64 = { version = "0.22.1", optional = true }
convert_case = { version = "0.8.0", optional = true }
derive_builder = { version = "0.20.2", default-features = false, features = ["alloc"] }
dlmalloc = {version = "0.2.8", features = ["global"]}
ed25519-dalek = { version = "2.1.1", optional = true }
rmp-serde = { version = "1.3.0", default-features = false }
rmpv = { version = "1.3.0", default-features = false, features = ["with-serde"] }
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
serde_json = "1.0.133"
serde_with = "3.11.0"
sha2 = "0.10.8"
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
algokit_transact = { path = '.', features = ["test_utils"] }
